# highlow_web

./: README.md  alembic.ini  pyproject.toml  test.db  zipbakcurdir.bat
alembic/versions/: 0b57e9314a46_update_user_table.py  4a827bfee018_create_fastapi_users_user_table.py
data/: test.db
frontend/notes/: notes.txt
frontend/react/: package-lock.json  package.json  tailwind.config.js
frontend/react/src/: App.jsx  index.js
frontend/react/src/clients/: authhelper.jsx  clientHelper.jsx  fapiClient.jsx
frontend/react/src/components/Navbar/: Navbar.js  NavbarElements.js
frontend/react/src/components/jr/: jrform.jsx  jrnavbar.jsx
frontend/react/src/pages/about/: index.jsx
frontend/react/src/pages/auth/: login.jsx  passwordForgot.jsx  passwordReset.jsx  profile.jsx  register.jsx
frontend/react/src/pages/home/: index.jsx
logs/: log_20240317_053851.txt
src/: hlweb.py
src/app/: authHelper.py  dbase.py  emailHelper.py  fapiusermanager.py  fapiusers.py  home.py  models.py  mytest.py  schemas.py  users.py
src/core/: config.py
src/lib/: logger.py
src/myApp/: admin.py  dbase.py  fapiusermanager.py  fapiusers.py  home.py  mytest.py  schemas.py  users.py
src/templates/: index.html  newUserSignupEmailVerification.txt
