[tool.poetry]
name = "hlweb"
version = "0.1.0"
description = ""
authors = ["dc mouser <mouser@donationcoder.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
httpie = "^3.2.2"
requests = "^2.31.0"
httpx = "^0.27.0"
fastapi-users = "^13.0.0"
pdflatex = "^0.1.3"
pylatex = "^1.4.2"
mistletoe = "^1.3.0"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
